--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>FIFA DATA1500</title>
+        <title>FIFA DATA1500 Final Project</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
