--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -20,7 +20,7 @@
 <h1>THE WORLD'S GAME</h1>
 <p>By: Herbert Gaxiola Lopez</p>
 <img src = "images/WorldCupCeleb.png">
-<h2>About this story.</h2>
+<h2>Why is this?</h2>
 
 
 </body>
