Reformatting and adding paragraphs

--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -8,19 +8,63 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
-
-   
 </head>
 
 
 <body>
 
 
-<h1>THE WORLD'S GAME</h1>
-<p>By: Herbert Gaxiola Lopez</p>
 <img src = "images/WorldCupCeleb.png">
-<h2>Why is this?</h2>
+
+
+<h1>THE WORLD'S GAME</h1>
+
+
+<p>By: Herbert Gaxiola Lopez</p>
+
+
+<h2>What is going on around the world?</h2>
+<div class ="divider"></div>
+<P>
+    Although football (soccer) is considered one of the most accessible and popular sports on the planet, the success of every country 
+    at the highest international levels varies - with only a handful of countries performing at the highest level consistently. 
+    As we can see, football is the most popular sport by a large margin- the vast majority of countries have the most football fans. 
+    The second largest sport is cricket, and football still clears cricket’s global popularity. 
+</P>
+<p>
+    The world is full of soccer players and fans, but somehow we have only seen two continents produce world champions. Countries like China, 
+    Russia, and Mexico have great populations but no international success. Perhaps there are some deeper reasons behind why some countries are
+    much more successful than others.
+</p>
+
+
+
+
+<h2>
+    Regional Differences
+</h2>
+<div class ="divider"></div>
+<p>
+The graphics below breaks down the official FIFA rankings by region. To produce this graphic, we found the average points in each of the 
+confederations and compared them to each other in which we see that there are  two clear leaders: CONMEBOL (South America) and UEFA (Europe). 
+These two regions happen to be the only that have produced world cup winners in 22 editions of the tournament.
+</p>
+<p>
+This is paired with a graphic showing the amount of world cup wins per country. There have only been 8 world cup winners: Brazil, Argentina,
+Germany, Spain, Italy, France, Uruguay, and England. Some of these teams have won the World Cup multiple times: Brazil has won it 5 times,
+Argentina has won three, France has won two, four for Germany, and four for Italy. 
+</p>
+
+
+
+
+<h2>History</h2>
+<div class ="divider"></div>
+<p>
+    However, when looking at the age of the oldest club in each country that has played in a world cup, we get a better understanding of this 
+    phenomenon (need to find a better vis for this)
+</p>
+
 
 
 </body>
