--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -25,12 +25,17 @@
 
 <h2>What is going on around the world?</h2>
 <div class ="divider"></div>
+
+<img src = "images/Football Popularity FINAL.png">
+
 <P>
     Although football (soccer) is considered one of the most accessible and popular sports on the planet, the success of every country 
     at the highest international levels varies - with only a handful of countries performing at the highest level consistently. 
     As we can see, football is the most popular sport by a large margin- the vast majority of countries have the most football fans. 
     The second largest sport is cricket, and football still clears cricket’s global popularity. 
 </P>
+
+<img src="images/Winners Only FINAL.png">
 <p>
     The world is full of soccer players and fans, but somehow we have only seen two continents produce world champions. Countries like China, 
     Russia, and Mexico have great populations but no international success. Perhaps there are some deeper reasons behind why some countries are
@@ -40,10 +45,10 @@
 
 
 
-<h2>
-    Regional Differences
-</h2>
+<h2>Regional Differences</h2>
 <div class ="divider"></div>
+
+<img src = "images/Confederation Averages FINAL.png">
 <p>
 The graphics below breaks down the official FIFA rankings by region. To produce this graphic, we found the average points in each of the 
 confederations and compared them to each other in which we see that there are  two clear leaders: CONMEBOL (South America) and UEFA (Europe). 
@@ -60,10 +65,20 @@ Argentina has won three, France has won two, four for Germany, and four for Ital
 
 <h2>History</h2>
 <div class ="divider"></div>
+
+<img src = "images/Club Foundations.png">
 <p>
     However, when looking at the age of the oldest club in each country that has played in a world cup, we get a better understanding of this 
     phenomenon (need to find a better vis for this)
 </p>
+
+
+<h2>So How Has the World Performed Differently?</h2>
+<div class ="divider"></div>
+
+<img src = "images/World Cup Results FINAL.png">
+
+
 
 
 
