Many changes to format and adding all text.

--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -3,45 +3,81 @@
 
 
 <head>
-    <title>THE WORLD'S GAME</title>
+    <title>Herbert Gaxiola Lopez | Football</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
 
 
-<img src = "images/WorldCupCeleb.png">
+<img src = "images/imageimage.png" class = landing>
+<h1>THE BEAUTIFUL GAME</h1>
+<p class = "by-line">Data 1500 Final Project By: Herbert Gaxiola Lopez</p>
 
 
-<h1>THE WORLD'S GAME</h1>
+
+<div class ="divider"></div>
 
 
-<p>By: Herbert Gaxiola Lopez</p>
+</div>
+
+<div class="container">
+    <div class="text">
+        <p>    Football (soccer) has historically been one of humanities favorite pasttimes. Every four years, the world stops to watch the most talented players
+            compete for the chance to achieve the dream of the millions watching them from their home country: winning the World Cup. This is considered the most
+            prestigious team trophy in professional football, as well as one of the most celebrated sporting accomplishments in the entire world.
+        </p>
+        <p>
+            Only 8 countries have been able to lift the World Cup: Brazil (5x), Germany (4x), Italy (4x), Argentina (3x), Uruguay (2x), France (2x), and Spain (1x),
+            and England (1x).
+            These countries also all happen to be from the same two geographic regions: South America and Europe. This project will explore this topic, and put into 
+            perspective the differences in success around the world. 
+        </p>
+    </div>
+    <div class="image">
+        <img src="images/mexico.png">
+    </div>
+</div>
 
 
-<h2>What is going on around the world?</h2>
+<h2>Football's Popularity</h2>
 <div class ="divider"></div>
 
 <img src = "images/Football Popularity FINAL.png">
 
 <P>
-    Although football (soccer) is considered one of the most accessible and popular sports on the planet, the success of every country 
-    at the highest international levels varies - with only a handful of countries performing at the highest level consistently. 
-    As we can see, football is the most popular sport by a large margin- the vast majority of countries have the most football fans. 
-    The second largest sport is cricket, and football still clears cricket’s global popularity. 
+   Before starting this project, I made the confident assumption that football was the most popular sport in the world. Upon further investigation and the gathering
+   of data, I concluded that football is quite easily the most popular (played, spectated) sport in the world (Bleacher Report). After gathering my data, I found it
+   useful to visualize this information on a map that would show two things: countries whose most popular sport is Football, and the rest of the countries. Initially, 
+   this map included the several other sports that were globally relevant, cricket and baseball to name two of the most popular, but the popularity of football makes
+   the rest of the sports almost completely irrelevant.
 </P>
 
-<img src="images/Winners Only FINAL.png">
 <p>
-    The world is full of soccer players and fans, but somehow we have only seen two continents produce world champions. Countries like China, 
-    Russia, and Mexico have great populations but no international success. Perhaps there are some deeper reasons behind why some countries are
-    much more successful than others.
+This brings us back to the overarching point: only 8 countries that are in blue have won a world cup. Almost the entire European, African, and South American continents
+are in blue, yet not every country has seen similar success at the highest level. Let's look into this a bit closer.
 </p>
 
+<img src="images/winnerwinner.png">
+<p>
+    Above, we see the countries that have managed to win a World Cup. Interestingly, most of these countries have won the competition more than once. 
+    The world is full of soccer players and fans, but somehow we have only seen two continents produce world champions. Countries like China, 
+    Russia, and Mexico have great populations but no international success. Looking at this through the footballing perspective, we need to break down a few things to 
+    understand this project further.
+</p>
+<p>
+    The international scene is split into what FIFA calls confederations. These confederations are groups of countries that regularly compete against each other. These
+    are determined by geographic location. What are these confederations? There are six confederations: UEFA (Europe), OFC (Oceania), CONMEBOL (South America),
+    CONCACAF (North America),  CAF (Africa), and the AFC (Asia). Even when splitting countries up by confederations, there are only two confederations that have world
+    cup winners: UEFA and CONMEBOL (European teams have won the World cup a total of 12 times, while South American teams have won it 10 times.)
+</p>
 
 
 
@@ -50,14 +86,17 @@
 
 <img src = "images/Confederation Averages FINAL.png">
 <p>
-The graphics below breaks down the official FIFA rankings by region. To produce this graphic, we found the average points in each of the 
-confederations and compared them to each other in which we see that there are  two clear leaders: CONMEBOL (South America) and UEFA (Europe). 
-These two regions happen to be the only that have produced world cup winners in 22 editions of the tournament.
+The graphic above breaks down the official FIFA rankings by region, or confederation. The FIFA ranking is a live points system based on performance and it has been active
+for a couple of decades now. These point totals are basically a sum of how well teams have performed. 
+To produce this graphic, I sourced the most 
+recent FIFA rankings, and sorted them
+by Confedereation. What we are seeing here is a representation of the Points Average by confederation. The x-axis represents the total points while the y-axis represents
+the categorical sorting by confederation. The dark black line on each category represents the average points by confederation. The overall finding is that CONMEBOL, or
+South America, has the highest points average, followed by UEFA (Europe). Again, the trend of these two being dominant regions remains. 
 </p>
 <p>
-This is paired with a graphic showing the amount of world cup wins per country. There have only been 8 world cup winners: Brazil, Argentina,
-Germany, Spain, Italy, France, Uruguay, and England. Some of these teams have won the World Cup multiple times: Brazil has won it 5 times,
-Argentina has won three, France has won two, four for Germany, and four for Italy. 
+Some closer findings are that UEFA has a much larger set: we see the lowest ranked country belonging to UEFA, but also the bulk of high performing countries also 
+existing in this region. CONMEBOL has a much smaller set, but has the highest ranked country, and a much smaller range compared to other confederations.
 </p>
 
 
@@ -68,8 +107,17 @@ Argentina has won three, France has won two, four for Germany, and four for Ital
 
 <img src = "images/Club Foundations.png">
 <p>
-    However, when looking at the age of the oldest club in each country that has played in a world cup, we get a better understanding of this 
-    phenomenon (need to find a better vis for this)
+    When looking at the age of the oldest club in each country that has played in a world cup, we get a better understanding of this 
+    phenomenon. In this graphic, we see the oldest club by country arranged in order by year established. In addition, we see that each country is colored by 
+    their respective confederation. The majority of South American and European countries had their first clubs established before 1900s. The earliest
+     countries to establish a club are Scotland, England, and Ireland: all countries that make up or once were a part of the UK. We see a few countries from other
+    confederations sneak into the early stages: Peru, USA, Argentina, Canada, and New Zealand to name a few of the earliest ones. These are all countries that were either
+    colonized by England or saw large populations of English migrants. England is where football was created.
+</p>
+
+<p>
+    Other findings include that the majority of Asian and African clubs were founded after 1900, with the UAE, South Korea, and Angola being some of the later countries
+    to found a football club.
 </p>
 
 
@@ -78,7 +126,22 @@ Argentina has won three, France has won two, four for Germany, and four for Ital
 
 <img src = "images/World Cup Results FINAL.png">
 
+<p>
+    Looking at how every country has performed in the world cup, we again see two geographic regions being clearly dominant: Eastern South America, and Western Europe,
+    with the successful countries even neighboring each other. Many Asian and African countries have not even qualified for the tournament, and no countries from 
+    these regions have ever won or gotten close to winning the competition. 
+</p>
 
+<h2> Conclusions</h2>
+<div class ="divider"></div>
+<p>
+    I was interested in this topic because I have grown up knowing that football was a huge part of Mexican culture, yet Mexican football is not respected. Yes,
+    we as a country bring a love for the sport that not many countries are known for, but we haven't even been close to winning a world cup. After putting together 
+    this project, it's still so hard to conclude why some countries don't perform well. It is much deeper than regional and popularity factors. Maybe the colonial impact
+    of Europe on South America provided some sort of platform for South American countries to succeed, but then why are there only a handful of winners? There could possibly
+    be infrastructural influences or some sort of system that pushes athletes to higher levels, but this is very difficult to measure. The answer to this phenomenon would take 
+    more research and analysis, but this is a starting point to coming to a more satisfying answer.
+</p>
 
 
 
