--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Herbert Gaxiola Lopez | Football</title>
+    <link rel="icon" type="image/x-icon" href="images/soccer.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
