--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -133,6 +133,11 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
     these regions have ever won or gotten close to winning the competition. 
 </p>
 
+<p>
+    Many countries in Central America have also not qualiifed, and the majority of North/ Central American countries have not performed well, despite football being 
+    quite popular in the majority of these couuntries.
+</p>
+
 <h2> Conclusions</h2>
 <div class ="divider"></div>
 <p>
