--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -140,14 +140,27 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 
 <h2> Conclusions</h2>
 <div class ="divider"></div>
-<p>
-    I was interested in this topic because I have grown up knowing that football was a huge part of Mexican culture, yet Mexican football is not respected. Yes,
-    we as a country bring a love for the sport that not many countries are known for, but we haven't even been close to winning a world cup. After putting together 
-    this project, it's still so hard to conclude why some countries don't perform well. It is much deeper than regional and popularity factors. Maybe the colonial impact
-    of Europe on South America provided some sort of platform for South American countries to succeed, but then why are there only a handful of winners? There could possibly
-    be infrastructural influences or some sort of system that pushes athletes to higher levels, but this is very difficult to measure. The answer to this phenomenon would take 
-    more research and analysis, but this is a starting point to coming to a more satisfying answer.
-</p>
+
+
+<div class="container">
+    <div class="text">
+        <p>
+            I was interested in this topic because I have grown up knowing that football was a huge part of Mexican culture, yet Mexican football is not respected. Yes,
+            we as a country bring a love for the sport that not many countries are known for, but we haven't even been close to winning a world cup. After putting together 
+            this project, it's still so hard to conclude why some countries don't perform well. 
+        </p>
+        <p>
+            It is much deeper than regional and popularity factors. Maybe the colonial impact
+            of Europe on South America provided some sort of platform for South American countries to succeed, but then why are there only a handful of winners? There could possibly
+            be infrastructural influences or some sort of system that pushes athletes to higher levels, but this is very difficult to measure. The answer to this phenomenon would take 
+            more research and analysis, but this is a starting point to coming to a more satisfying answer.
+        </p>
+    </div>
+    <div class="image">
+        <img src="images/KAKAKAKA.png">
+    </div>
+</div>
+
 
 
 
