--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -59,6 +59,7 @@
    useful to visualize this information on a map that would show two things: countries whose most popular sport is Football, and the rest of the countries. Initially, 
    this map included the several other sports that were globally relevant, cricket and baseball to name two of the most popular, but the popularity of football makes
    the rest of the sports almost completely irrelevant.
+   <a href="https://bleacherreport.com/articles/169462-most-popular-team-sports-soccer-cricket-basketball-baseball">You can learn more about Bleacher Report's sport popularity list here.</a>
 </P>
 
 <p>
@@ -77,7 +78,8 @@ are in blue, yet not every country has seen similar success at the highest level
     The international scene is split into what FIFA calls confederations. These confederations are groups of countries that regularly compete against each other. These
     are determined by geographic location. What are these confederations? There are six confederations: UEFA (Europe), OFC (Oceania), CONMEBOL (South America),
     CONCACAF (North America),  CAF (Africa), and the AFC (Asia). Even when splitting countries up by confederations, there are only two confederations that have world
-    cup winners: UEFA and CONMEBOL (European teams have won the World cup a total of 12 times, while South American teams have won it 10 times.)
+    cup winners: UEFA and CONMEBOL (European teams have won the World cup a total of 12 times, while South American teams have won it 10 times). 
+    <a href="https://www.foxsports.com/soccer/2022-fifa-world-cup/history">Check out the history of world cup winners here.</a>
 </p>
 
 
@@ -98,6 +100,7 @@ South America, has the highest points average, followed by UEFA (Europe). Again,
 <p>
 Some closer findings are that UEFA has a much larger set: we see the lowest ranked country belonging to UEFA, but also the bulk of high performing countries also 
 existing in this region. CONMEBOL has a much smaller set, but has the highest ranked country, and a much smaller range compared to other confederations.
+<a href="https://inside.fifa.com/fifa-world-ranking/men">Here are the FIFA rankings.</a>
 </p>
 
 
@@ -119,6 +122,8 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 <p>
     Other findings include that the majority of Asian and African clubs were founded after 1900, with the UAE, South Korea, and Angola being some of the later countries
     to found a football club.
+    <a href="https://en.wikipedia.org/wiki/Oldest_football_clubs">You can learn more about the history of football clubs here.</a>
+    
 </p>
 
 
@@ -136,6 +141,8 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 <p>
     Many countries in Central America have also not qualiifed, and the majority of North/ Central American countries have not performed well, despite football being 
     quite popular in the majority of these couuntries.
+    <a href="https://en.wikipedia.org/wiki/National_team_appearances_in_the_FIFA_World_Cup">Here is a more in depth look at each country's best results.</a>
+  
 </p>
 
 <h2> Conclusions</h2>
