--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Herbert Gaxiola Lopez | Football</title>
+    <title>Herbert Gaxiola Lopez | The Beautiful Game</title>
     <link rel="icon" type="image/x-icon" href="images/soccer.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
