--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -93,7 +93,7 @@ The graphic above breaks down the official FIFA rankings by region, or confedera
 for a couple of decades now. These point totals are basically a sum of how well teams have performed. 
 To produce this graphic, I sourced the most 
 recent FIFA rankings, and sorted them
-by Confedereation. What we are seeing here is a representation of the Points Average by confederation. The x-axis represents the total points while the y-axis represents
+by confederation. What we are seeing here is a representation of the Points Average by confederation. The x-axis represents the total points while the y-axis represents
 the categorical sorting by confederation. The dark black line on each category represents the average points by confederation. The overall finding is that CONMEBOL, or
 South America, has the highest points average, followed by UEFA (Europe). Again, the trend of these two being dominant regions remains. 
 </p>
@@ -139,7 +139,7 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 </p>
 
 <p>
-    Many countries in Central America have also not qualiifed, and the majority of North/ Central American countries have not performed well, despite football being 
+    Many countries in Central America have also not qualified, and the majority of North/ Central American countries have not performed well, despite football being 
     quite popular in the majority of these couuntries.
     <a href="https://en.wikipedia.org/wiki/National_team_appearances_in_the_FIFA_World_Cup">Here is a more in depth look at each country's best results.</a>
   
