Final Style Changes

--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -20,7 +20,12 @@
 
 <img src = "images/imageimage.png" class = landing>
 <h1>THE BEAUTIFUL GAME</h1>
-<p class = "by-line">Data 1500 Final Project By: Herbert Gaxiola Lopez</p>
+
+<div class = "attribution">
+    <p class = "by-line">By: Herbert Gaxiola Lopez</p>
+    <p class = "pubdate"> May 2, 2024</p>
+</div>
+
 
 
 
@@ -53,6 +58,7 @@
 
 <img src = "images/Football Popularity FINAL.png">
 
+
 <P>
    Before starting this project, I made the confident assumption that football was the most popular sport in the world. Upon further investigation and the gathering
    of data, I concluded that football is quite easily the most popular (played, spectated) sport in the world (Bleacher Report). After gathering my data, I found it
@@ -67,7 +73,9 @@ This brings us back to the overarching point: only 8 countries that are in blue 
 are in blue, yet not every country has seen similar success at the highest level. Let's look into this a bit closer.
 </p>
 
+<div class ="divider"></div>
 <img src="images/winnerwinner.png">
+
 <p>
     Above, we see the countries that have managed to win a World Cup. Interestingly, most of these countries have won the competition more than once. 
     The world is full of soccer players and fans, but somehow we have only seen two continents produce world champions. Countries like China, 
@@ -88,6 +96,7 @@ are in blue, yet not every country has seen similar success at the highest level
 <div class ="divider"></div>
 
 <img src = "images/Confederation Averages FINAL.png">
+
 <p>
 The graphic above breaks down the official FIFA rankings by region, or confederation. The FIFA ranking is a live points system based on performance and it has been active
 for a couple of decades now. These point totals are basically a sum of how well teams have performed. 
@@ -95,7 +104,7 @@ To produce this graphic, I sourced the most
 recent FIFA rankings, and sorted them
 by confederation. What we are seeing here is a representation of the Points Average by confederation. The x-axis represents the total points while the y-axis represents
 the categorical sorting by confederation. The dark black line on each category represents the average points by confederation. The overall finding is that CONMEBOL, or
-South America, has the highest points average, followed by UEFA (Europe). Again, the trend of these two being dominant regions remains. 
+South America, has the highest points average, followed by UEFA, or Europe. Again, the trend of these two being dominant regions remains. 
 </p>
 <p>
 Some closer findings are that UEFA has a much larger set: we see the lowest ranked country belonging to UEFA, but also the bulk of high performing countries also 
@@ -110,6 +119,7 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 <div class ="divider"></div>
 
 <img src = "images/Club Foundations.png">
+
 <p>
     When looking at the age of the oldest club in each country that has played in a world cup, we get a better understanding of this 
     phenomenon. In this graphic, we see the oldest club by country arranged in order by year established. In addition, we see that each country is colored by 
@@ -132,6 +142,7 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 
 <img src = "images/World Cup Results FINAL.png">
 
+
 <p>
     Looking at how every country has performed in the world cup, we again see two geographic regions being clearly dominant: Eastern South America, and Western Europe,
     with the successful countries even neighboring each other. Many Asian and African countries have not even qualified for the tournament, and no countries from 
@@ -139,15 +150,38 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
 </p>
 
 <p>
-    Many countries in Central America have also not qualified, and the majority of North/ Central American countries have not performed well, despite football being 
-    quite popular in the majority of these couuntries.
+    Many countries in Central America have also not qualified, and the majority of North/Central American countries have not performed well, despite football being 
+    quite popular in the majority of these countries.
     <a href="https://en.wikipedia.org/wiki/National_team_appearances_in_the_FIFA_World_Cup">Here is a more in depth look at each country's best results.</a>
   
 </p>
 
-<h2> Conclusions</h2>
-<div class ="divider"></div>
 
+
+<figure>
+    <div class = "flex-row bordered">
+        <div class = "flex-column">
+            <img class = "photo" src = "images/KAKAKAKA.png">
+        </div>
+        <div class = "flex-column">
+            <img class = "photo" src = "images/gio.png">
+        </div>
+        <div class = "flex-column">
+            <img class = "photo" src = "images/iniesta.png">
+        </div>
+        <div class = "flex-column">
+            <img class = "photo" src = "images/forlan.png">
+        </div>
+    </div>
+    <figcaption class = "graphic-footer centered"> World Cup moments that made me love the sport: My father introducing me to Kaka, watching 
+        Mexico's first knockout game, my first World Cup Final, and watching Diego Forlan light up the 2010 tournament.
+    </figcaption>
+</figure>
+
+
+
+<h2> Conclusion</h2>
+<div class ="divider"></div>
 
 <div class="container">
     <div class="text">
@@ -164,7 +198,7 @@ existing in this region. CONMEBOL has a much smaller set, but has the highest ra
         </p>
     </div>
     <div class="image">
-        <img src="images/KAKAKAKA.png">
+        <img src="images/ney.png">
     </div>
 </div>
 
