--- a/fifa-rankings/index.html
+++ b/fifa-rankings/index.html
@@ -36,7 +36,7 @@
 
 <div class="container">
     <div class="text">
-        <p>    Football (soccer) has historically been one of humanities favorite pasttimes. Every four years, the world stops to watch the most talented players
+        <p>    Football (soccer) has historically been one of humanities favorite pastimes. Every four years, the world stops to watch the most talented players
             compete for the chance to achieve the dream of the millions watching them from their home country: winning the World Cup. This is considered the most
             prestigious team trophy in professional football, as well as one of the most celebrated sporting accomplishments in the entire world.
         </p>
